--- a/Biblio.bib
+++ b/Biblio.bib
@@ -200,7 +200,6 @@ journal = "Computers & Structures",
 volume = "174",
 pages = "42 - 53",
 year = "2016",
-note = "CIVIL-COMP",
 issn = "0045-7949",
 doi = "10.1016/j.compstruc.2015.10.005",
 author = "T. Nagashima and M. Sawada",
@@ -425,7 +424,7 @@ doi = {10.1007/s00033-005-3011-0}
 }
 
 @article{Nairn_2004,
-author = {GUO, Y. and Nairn, John},
+author = {Guo, Y. and Nairn, John},
 volume = {6},
 year = {2004},
 number = {3},
